--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     />
   </head>
   <body>
+    <div class="bg-image1">
     <header class="header">
       <div class="nav-block">
         <div class="logo">
@@ -73,5 +74,15 @@
         </div>
       </div>
     </header>
+    <div class="bg-title1">
+    <h1><span class="bikes">Велосипеды</span> <br />с твоим харктером</h1>
+    <a>Подписаться</a>
+</div>
+    </div>
+</div>
+    <div class="features">
+        <h1>У нас более 200 моделей прогулочных<br /> велосипедов для настоящих мужчин</h1>
+        <p class="free" style="margin-top: 20px;">Бесплатный выездной тест-драйв на все модели. Система рассрочки 0-0-5.<br /> Для членов клуба бесплатно предоставляется выездной сервис,<br /> зимнее хранение и куча привилегий от партнеров.</p>
+    </div>
   </body>
 </html>
