--- a/index.html
+++ b/index.html
@@ -13,76 +13,144 @@
   </head>
   <body>
     <div class="bg-image1">
-    <header class="header">
-      <div class="nav-block">
-        <div class="logo">
-          <img src="/img/logo.svg" />
+      <header class="header">
+        <div class="nav-block">
+          <div class="logo">
+            <img src="/img/logo.svg" />
+          </div>
+          <ul class="nav">
+            <li>Велосипеды</li>
+            <li>Аксессуары</li>
+            <li>Запчасти</li>
+            <li>Мастерская</li>
+            <li>Доставка и оплата</li>
+            <li>Контакты</li>
+          </ul>
+          <div class="nav-icons">
+            <svg
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+              width="22"
+              height="22"
+              viewBox="0 0 22 22"
+            >
+              <path
+                fill-rule="evenodd"
+                clip-rule="evenodd"
+                d="M0 2.06c0 .6.45 1.08 1 1.08h2.17l3.06 7.04v.01l-1.05 2.5a2.2 2.2 0 001 2.84c.26.12.54.19.82.19h10.5c.55 0 1-.48 1-1.08 0-.59-.45-1.07-1-1.07H7l.67-1.59h9.04l4.23-7.9c.27-.52.1-1.17-.37-1.47a.96.96 0 00-1.37.4l-3.65 6.83H8.3L4.45.99H1c-.55 0-1 .48-1 1.07zM10 19.2c0 1.19-.9 2.15-2 2.15s-2-.96-2-2.15c0-1.18.9-2.14 2-2.14s2 .96 2 2.14zm6 2.15c1.1 0 2-.96 2-2.15 0-1.18-.9-2.14-2-2.14s-2 .96-2 2.14c0 1.19.9 2.15 2 2.15z"
+                fill="#9B8869"
+              />
+            </svg>
+
+            <svg
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+              width="18"
+              height="19"
+              viewBox="0 0 18 19"
+            >
+              <path
+                fill-rule="evenodd"
+                clip-rule="evenodd"
+                d="M11.43 11.56l.28.29h.79l4.35 4.67a1 1 0 010 1.37l-.12.13a1 1 0 01-1.46 0L11 13.45v-.84l-.27-.3a6.23 6.23 0 01-4.23 1.68c-3.59 0-6.5-3.12-6.5-6.96C0 3.18 2.91.06 6.5.06S13 3.18 13 7.03c0 1.72-.59 3.3-1.57 4.53zM6.5 2.2C4.01 2.2 2 4.36 2 7.03c0 2.66 2.01 4.82 4.5 4.82S11 9.69 11 7.03C11 4.36 8.99 2.2 6.5 2.2z"
+                fill="#9B8869"
+              />
+            </svg>
+
+            <svg
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+              width="18"
+              height="23"
+              viewBox="0 0 18 23"
+            >
+              <path
+                fill-rule="evenodd"
+                clip-rule="evenodd"
+                d="M9 11.28c2.76 0 5-2.48 5-5.53C14 2.69 11.76.22 9 .22S4 2.69 4 5.75c0 3.05 2.24 5.53 5 5.53zm0-8.85c1.66 0 3 1.48 3 3.32 0 1.83-1.34 3.31-3 3.31S6 7.58 6 5.75C6 3.9 7.34 2.43 9 2.43zm9 18.8c0 .6-.45 1.1-1 1.1s-1-.5-1-1.1v-2.21c0-1.62-3.84-3.32-7-3.32s-7 1.7-7 3.32v2.2c0 .62-.45 1.11-1 1.11s-1-.5-1-1.1v-2.21c0-3.4 4.83-5.53 9-5.53s9 2.14 9 5.53v2.2z"
+                fill="#9B8869"
+              />
+            </svg>
+          </div>
         </div>
-        <ul class="nav">
-          <li>Велосипеды</li>
-          <li>Аксессуары</li>
-          <li>Запчасти</li>
-          <li>Мастерская</li>
-          <li>Доставка и оплата</li>
-          <li>Контакты</li>
-        </ul>
-        <div class="nav-icons">
-          <svg
-            fill="none"
-            xmlns="http://www.w3.org/2000/svg"
-            width="22"
-            height="22"
-            viewBox="0 0 22 22"
-          >
-            <path
-              fill-rule="evenodd"
-              clip-rule="evenodd"
-              d="M0 2.06c0 .6.45 1.08 1 1.08h2.17l3.06 7.04v.01l-1.05 2.5a2.2 2.2 0 001 2.84c.26.12.54.19.82.19h10.5c.55 0 1-.48 1-1.08 0-.59-.45-1.07-1-1.07H7l.67-1.59h9.04l4.23-7.9c.27-.52.1-1.17-.37-1.47a.96.96 0 00-1.37.4l-3.65 6.83H8.3L4.45.99H1c-.55 0-1 .48-1 1.07zM10 19.2c0 1.19-.9 2.15-2 2.15s-2-.96-2-2.15c0-1.18.9-2.14 2-2.14s2 .96 2 2.14zm6 2.15c1.1 0 2-.96 2-2.15 0-1.18-.9-2.14-2-2.14s-2 .96-2 2.14c0 1.19.9 2.15 2 2.15z"
-              fill="#9B8869"
-            />
-          </svg>
+      </header>
+      <div class="bg-title1">
+        <h1><span class="bikes">Велосипеды</span> <br />с твоим харктером</h1>
+        <div
+          style="
+            border: 2px solid rgb(156, 137, 105) !important;
 
-          <svg
-            fill="none"
-            xmlns="http://www.w3.org/2000/svg"
-            width="18"
-            height="19"
-            viewBox="0 0 18 19"
+            text-decoration: none;
+            width: 35%;
+            margin-top: 40px;
+          "
+          сlass="subscribe"
+        >
+          <a
+            style="
+              color: rgb(156, 137, 105) !important;
+              text-decoration: none;
+              font-size: 20px;
+              width: 100%;
+            "
+            href="#"
+            >В магазин</a
           >
-            <path
-              fill-rule="evenodd"
-              clip-rule="evenodd"
-              d="M11.43 11.56l.28.29h.79l4.35 4.67a1 1 0 010 1.37l-.12.13a1 1 0 01-1.46 0L11 13.45v-.84l-.27-.3a6.23 6.23 0 01-4.23 1.68c-3.59 0-6.5-3.12-6.5-6.96C0 3.18 2.91.06 6.5.06S13 3.18 13 7.03c0 1.72-.59 3.3-1.57 4.53zM6.5 2.2C4.01 2.2 2 4.36 2 7.03c0 2.66 2.01 4.82 4.5 4.82S11 9.69 11 7.03C11 4.36 8.99 2.2 6.5 2.2z"
-              fill="#9B8869"
-            />
-          </svg>
-
-          <svg
-            fill="none"
-            xmlns="http://www.w3.org/2000/svg"
-            width="18"
-            height="23"
-            viewBox="0 0 18 23"
-          >
-            <path
-              fill-rule="evenodd"
-              clip-rule="evenodd"
-              d="M9 11.28c2.76 0 5-2.48 5-5.53C14 2.69 11.76.22 9 .22S4 2.69 4 5.75c0 3.05 2.24 5.53 5 5.53zm0-8.85c1.66 0 3 1.48 3 3.32 0 1.83-1.34 3.31-3 3.31S6 7.58 6 5.75C6 3.9 7.34 2.43 9 2.43zm9 18.8c0 .6-.45 1.1-1 1.1s-1-.5-1-1.1v-2.21c0-1.62-3.84-3.32-7-3.32s-7 1.7-7 3.32v2.2c0 .62-.45 1.11-1 1.11s-1-.5-1-1.1v-2.21c0-3.4 4.83-5.53 9-5.53s9 2.14 9 5.53v2.2z"
-              fill="#9B8869"
-            />
-          </svg>
         </div>
       </div>
-    </header>
-    <div class="bg-title1">
-    <h1><span class="bikes">Велосипеды</span> <br />с твоим харктером</h1>
-    <a>Подписаться</a>
-</div>
     </div>
-</div>
     <div class="features">
-        <h1>У нас более 200 моделей прогулочных<br /> велосипедов для настоящих мужчин</h1>
-        <p class="free" style="margin-top: 20px;">Бесплатный выездной тест-драйв на все модели. Система рассрочки 0-0-5.<br /> Для членов клуба бесплатно предоставляется выездной сервис,<br /> зимнее хранение и куча привилегий от партнеров.</p>
+      <h2>
+        У нас более 200 моделей прогулочных<br />
+        велосипедов для настоящих мужчин
+      </h2>
+      <p class="free" style="margin-top: 20px">
+        Бесплатный выездной тест-драйв на все модели. Система рассрочки
+        0-0-5.<br />
+        Для членов клуба бесплатно предоставляется выездной сервис,<br />
+        зимнее хранение и куча привилегий от партнеров.
+      </p>
+    </div>
+    <div class="mini-catalogue">
+      <div class="bike-1 bikes">
+        <div class="bike-1-pic bikes-pic">
+          <img src="/img/pocalypse-fekete-69.png" />
+        </div>
+        <div>
+          <h2 style="font-size: 22px">Peuzer Kropper<br />Apocalypse</h2>
+          <p style="font-size: 16px; text-transform: none">
+            24”, сталь Hi-Ten <br />
+            Венгрия
+          </p>
+          <p style="font-size: 20px">75 000 ₽</p>
+        </div>
+      </div>
+      <div class="bike-2 bikes">
+        <div class="bike-2-pic bikes-pic">
+          <img src="/img/pocalypse-fekete-28.png" />
+        </div>
+        <div>
+          <h2 style="font-size: 22px">Schwimm Stingold<br />Oss</h2>
+          <p style="font-size: 16px; text-transform: none">
+            20”+24”, сталь<br />
+            США
+          </p>
+          <p style="font-size: 20px">34 000 ₽</p>
+        </div>
+      </div>
+      <div class="bike-3 bikes">
+        <div class="bike-3-pic bikes-pic">
+          <img src="/img/pocalypse-fekete-37.png" />
+        </div>
+        <div>
+          <h2 style="font-size: 22px">Darley <br />Ravidson</h2>
+          <p style="font-size: 16px; text-transform: none">
+            20”, сталь <br />
+            Китай
+          </p>
+          <p style="font-size: 20px">23 000 ₽</p>
+        </div>
+      </div>
     </div>
   </body>
 </html>
