--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
       </div>
     </div>
     <div class="features">
-      <h2>
+      <h2 style="font-size: 40px">
         У нас более 200 моделей прогулочных<br />
         велосипедов для настоящих мужчин
       </h2>
@@ -257,6 +257,159 @@
           <a class="more" href="#_blank">Подробнее</a>
         </div>
       </div>
+    </div>
+    <div class="features">
+      <h2 style="font-size: 40px">Запчасти и аксессуары</h2>
+      <p class="free" style="margin-top: 20px">
+        Всегда большой выбор запчастей и аксессуаров для чоппер-байков. <br />
+        Если вы чего-то не нашли в наличии, наши консультанты помогут <br />
+        заказать и доставить товар из любой точки мира.
+      </p>
+    </div>
+    <div class="mini-catalogue">
+      <div class="bike-1 bikes">
+        <div class="bike-1-pic bikes-pic">
+          <img src="/img/pocalypse-fekete.png" />
+          <svg
+            class="bikes-buy"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+            width="31"
+            height="19"
+            viewBox="0 0 31 19"
+          >
+            <path
+              fill-rule="evenodd"
+              clip-rule="evenodd"
+              d="M1 2a1 1 0 010-2h3.45l3.84 8.26h7.26l3.65-6.38a1 1 0 111.74 1l-4.23 7.38H7.67L7 11.74h10.5a1 1 0 010 2H7a2 2 0 01-1.82-2.82L6.23 8.6v-.01L3.17 2H1zm7 17a2 2 0 100-4 2 2 0 000 4zm10-2a2 2 0 11-4 0 2 2 0 014 0zm8-11a1 1 0 112 0v2h2a1 1 0 110 2h-2v2a1 1 0 11-2 0v-2h-2a1 1 0 110-2h2V6z"
+              fill="#F2F5F7"
+            />
+          </svg>
+        </div>
+        <div class="bike-info">
+          <h2 style="font-size: 22px">Седло<br />G-Soul</h2>
+          <p style="font-size: 16px; text-transform: none">
+            24”, сталь Hi-Ten <br />
+            Венгрия
+          </p>
+          <p class="price" style="font-size: 20px; line-height: 60px">3200 ₽</p>
+        </div>
+      </div>
+      <div class="bike-2 bikes">
+        <div class="bike-2-pic bikes-pic">
+          <img src="/img/boothill-bike-large-chrome.png" />
+          <svg
+            class="bikes-buy"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+            width="31"
+            height="19"
+            viewBox="0 0 31 19"
+          >
+            <path
+              fill-rule="evenodd"
+              clip-rule="evenodd"
+              d="M1 2a1 1 0 010-2h3.45l3.84 8.26h7.26l3.65-6.38a1 1 0 111.74 1l-4.23 7.38H7.67L7 11.74h10.5a1 1 0 010 2H7a2 2 0 01-1.82-2.82L6.23 8.6v-.01L3.17 2H1zm7 17a2 2 0 100-4 2 2 0 000 4zm10-2a2 2 0 11-4 0 2 2 0 014 0zm8-11a1 1 0 112 0v2h2a1 1 0 110 2h-2v2a1 1 0 11-2 0v-2h-2a1 1 0 110-2h2V6z"
+              fill="#F2F5F7"
+            />
+          </svg>
+        </div>
+        <div class="bike-info">
+          <h2 style="font-size: 22px">Скмка на руль<br />Cropalm</h2>
+          <p style="font-size: 16px; text-transform: none">
+            20”+24”, сталь<br />
+            США
+          </p>
+          <p class="price" style="font-size: 20px; line-height: 60px">1800 ₽</p>
+        </div>
+      </div>
+      <div class="bike-3 bikes">
+        <div class="bike-3-pic bikes-pic">
+          <img src="/img/inch-chopper-bike-2.png" />
+          <svg
+            class="bikes-buy"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+            width="31"
+            height="19"
+            viewBox="0 0 31 19"
+          >
+            <path
+              fill-rule="evenodd"
+              clip-rule="evenodd"
+              d="M1 2a1 1 0 010-2h3.45l3.84 8.26h7.26l3.65-6.38a1 1 0 111.74 1l-4.23 7.38H7.67L7 11.74h10.5a1 1 0 010 2H7a2 2 0 01-1.82-2.82L6.23 8.6v-.01L3.17 2H1zm7 17a2 2 0 100-4 2 2 0 000 4zm10-2a2 2 0 11-4 0 2 2 0 014 0zm8-11a1 1 0 112 0v2h2a1 1 0 110 2h-2v2a1 1 0 11-2 0v-2h-2a1 1 0 110-2h2V6z"
+              fill="#F2F5F7"
+            />
+          </svg>
+        </div>
+        <div class="bike-info">
+          <h2 style="font-size: 22px">Седло <br />Darley b36 q</h2>
+          <p style="font-size: 16px; text-transform: none">
+            20”, сталь <br />
+            Китай
+          </p>
+          <p class="price" style="font-size: 20px; line-height: 60px">8625 ₽</p>
+        </div>
+      </div>
+      <div class="bike-3 bikes">
+        <div class="bike-3-pic bikes-pic">
+          <img src="/img/inch-chopper-bike.png" />
+          <svg
+            class="bikes-buy"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+            width="31"
+            height="19"
+            viewBox="0 0 31 19"
+          >
+            <path
+              fill-rule="evenodd"
+              clip-rule="evenodd"
+              d="M1 2a1 1 0 010-2h3.45l3.84 8.26h7.26l3.65-6.38a1 1 0 111.74 1l-4.23 7.38H7.67L7 11.74h10.5a1 1 0 010 2H7a2 2 0 01-1.82-2.82L6.23 8.6v-.01L3.17 2H1zm7 17a2 2 0 100-4 2 2 0 000 4zm10-2a2 2 0 11-4 0 2 2 0 014 0zm8-11a1 1 0 112 0v2h2a1 1 0 110 2h-2v2a1 1 0 11-2 0v-2h-2a1 1 0 110-2h2V6z"
+              fill="#F2F5F7"
+            />
+          </svg>
+        </div>
+        <div class="bike-info">
+          <h2 style="font-size: 22px">Звезды <br />Schrima</h2>
+          <p style="font-size: 16px; text-transform: none">
+            20”, сталь <br />
+            Китай
+          </p>
+          <p class="price" style="font-size: 20px; line-height: 60px">
+            16780 ₽
+          </p>
+        </div>
+      </div>
+    </div>
+    <div class="all-bikes">
+      <svg class="svg-line">
+        <line
+          x1="0"
+          y1="25"
+          x2="700"
+          y2="25"
+          style="stroke: rgb(156, 137, 105); stroke-width: 2px; opacity: 0.5"
+        />
+      </svg>
+      <div class="all-bikes-button">
+        <p>
+          <a
+            href="#_blank"
+            style="color: rgb(156, 137, 105) !important; text-decoration: none"
+            >Перейти в каталог</a
+          >
+        </p>
+      </div>
+      <svg class="svg-line">
+        <line
+          x1="0"
+          y1="25"
+          x2="700"
+          y2="25"
+          style="stroke: rgb(156, 137, 105); stroke-width: 2px; opacity: 0.5"
+        />
+      </svg>
     </div>
   </body>
 </html>
