--- a/index.html
+++ b/index.html
@@ -411,5 +411,72 @@
         />
       </svg>
     </div>
+    <div class="bgimage3">
+      <div class="bgimage3-blocks">
+        <div class="mastery">
+          <h2
+            style="
+              font-size: 40px;
+              text-transform: uppercase;
+              margin-bottom: 35px;
+              line-height: 50px;
+            "
+          >
+            Вступай в клуб и получай <br />
+            специальные привилегии
+          </h2>
+          <p style="font-size: 22px; color: rgb(233, 225, 214)">
+            Введите ваши данные и наш менеджер <br />
+            свяжется с вами в ближайшее время
+          </p>
+          <form class="form">
+            <input class="name" type="text" size="40" placeholder="Имя" />
+            <input
+              class="surname"
+              type="text"
+              size="40"
+              placeholder="Фамилия"
+            />
+            <input class="email" type="text" size="40" placeholder="E-mail" />
+          </form>
+          <p
+            style="
+              font-size: 22px;
+              color: rgb(233, 225, 214);
+              margin-top: 35px;
+              margin-bottom: 35px;
+            "
+          >
+            Выберите ваш стаж вождения
+          </p>
+          <div class="radio">
+            <p>
+              <input
+                style="background-color: transparent"
+                name="dzen"
+                type="radio"
+                value=" < 1goda "
+              />
+              До 1 года
+            </p>
+            <p>
+              <input name="dzen" type="radio" value=" < 5 let " checked /> До 5
+              лет
+            </p>
+            <p>
+              <input name="dzen" type="radio" value=" > 5 let" /> Более 5 лет
+            </p>
+          </div>
+          <p style="color: rgb(233, 225, 214)">
+            <input
+              style="margin-top: 35px; margin-right: 10px"
+              type="checkbox"
+            />Я даю согласие на обработку персональных данных
+          </p>
+          <a class="more" href="#_blank">Подать заявку</a>
+        </div>
+        <img src="/img/club-pic.jpg" alt="Фото нашего мастера" />
+      </div>
+    </div>
   </body>
 </html>
